--- a/LockerHelpers/LockerHelpers.csproj
+++ b/LockerHelpers/LockerHelpers.csproj
@@ -1,29 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Company>Kiryuumaru</Company>
     <Authors>Kiryuumaru</Authors>
+    <Copyright>Kiryuumaru</Copyright>
     <Description>Provides helpers for execution locking mechanism.</Description>
-    <RepositoryUrl>https://github.com/Kiryuumaru/LockerHelpers</RepositoryUrl>
     <PackageTags>Lock, ReadWrite, Read, Write, ReaderWriterLockSlim, SemaphoreSlim, Helper</PackageTags>
     <PackageProjectUrl>https://github.com/Kiryuumaru/LockerHelpers</PackageProjectUrl>
-    <Version>1.0.0</Version>
-    <PackageReleaseNotes>* Initial release</PackageReleaseNotes>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Kiryuumaru/LockerHelpers</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>* Updated target framework</PackageReleaseNotes>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="" />
-    <None Include="..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <None Include="..\README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
