Added trimming for .net6

--- a/LockerHelpers/LockerHelpers.csproj
+++ b/LockerHelpers/LockerHelpers.csproj
@@ -8,6 +8,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <Authors>Kiryuumaru</Authors>
     <Company>Kiryuumaru</Company>
     <Copyright>Kiryuumaru</Copyright>
@@ -17,13 +20,22 @@
     <RepositoryUrl>https://github.com/Kiryuumaru/LockerHelpers</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>* Added upper frameworks to simplify dependencies.</PackageReleaseNotes>
-    <Version>1.0.2</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageReleaseNotes>* Added trimming for .net6.</PackageReleaseNotes>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="" />
     <None Include="..\README.md" Pack="true" PackagePath="" />
   </ItemGroup>
+
+  <!-- Enable trimming support on .NET 6 -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+    <IsTrimmable>true</IsTrimmable>
+  </PropertyGroup>
 
 </Project>
