--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -44,7 +44,7 @@ jobs:
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
   LOCKERHELPERSBUILD:
     name: Build - locker_helpers (LockerHelpersBuild)
-    runs-on: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUNS_ON }}
+    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUNS_ON) }}
     steps:
     - uses: actions/checkout@v4
     - name: Cache Run
@@ -72,7 +72,7 @@ jobs:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   LOCKERHELPERSPUBLISH:
     name: Publish - locker_helpers (LockerHelpersPublish)
-    runs-on: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUNS_ON }}
+    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUNS_ON) }}
     steps:
     - uses: actions/checkout@v4
     - name: Download artifacts
