--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -20,6 +20,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        fetch-tags: true
+        submodules: recursive
     - id: NUKE_RUN
       name: Run Nuke PipelinePreSetup
       run: chmod +x ./build.sh && ./build.sh PipelinePreSetup
@@ -36,17 +38,27 @@ jobs:
       NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_KEY }}
       NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY }}
       NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_MAIN_RESTORE_KEY }}
+      NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_DEPTH }}
+      NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_TAGS }}
+      NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_SUBMODULES }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CONDITION }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUNS_ON }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_KEY }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY }}
       NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
+      NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_DEPTH }}
+      NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_TAGS }}
+      NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_SUBMODULES }}
   LOCKERHELPERSBUILD:
     name: Build - locker_helpers (LockerHelpersBuild)
     runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUNS_ON) }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_DEPTH }}
+        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_FETCH_TAGS }}
+        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CHECKOUT_SUBMODULES }}
     - name: Cache Run
       uses: actions/cache@v4
       with:
@@ -56,8 +68,8 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Run Nuke PipelineBuild
-      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUN_SCRIPT }} PipelineBuild --args "LockerHelpersBuild"
+      name: Run Nuke PipelineRunEntry
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUN_SCRIPT }} PipelineRunEntry --args "run=build;idsToRun=LockerHelpersBuild"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -75,6 +87,10 @@ jobs:
     runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUNS_ON) }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_DEPTH }}
+        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_FETCH_TAGS }}
+        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CHECKOUT_SUBMODULES }}
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
@@ -89,8 +105,8 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Run Nuke PipelinePublish
-      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }} PipelinePublish --args "LockerHelpersPublish"
+      name: Run Nuke PipelineRunEntry
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }} PipelineRunEntry --args "run=publish;idsToRun=LockerHelpersPublish"
     needs:
     - PRE_SETUP
     - LOCKERHELPERSBUILD
@@ -102,6 +118,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        fetch-tags: true
+        submodules: recursive
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
