--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -15,7 +15,8 @@ concurrency:
 jobs:
   PRE_SETUP:
     name: Pre Setup
-    runs-on: ubuntu-22.04
+    runs-on:
+      labels: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
       with:
@@ -27,6 +28,7 @@ jobs:
       run: chmod +x ./build.sh && ./build.sh PipelinePreSetup
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    timeout-minutes: 10
     outputs:
       NUKE_PRE_SETUP: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP }}
       NUKE_PRE_SETUP_OUTPUT_TEST_MATRIX: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_OUTPUT_TEST_MATRIX }}
@@ -62,7 +64,7 @@ jobs:
     - name: Cache Run
       uses: actions/cache@v4
       with:
-        path: ./.nuke/cache
+        path: ./.nuke/temp/cache
         key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_KEY }}
         restore-keys: |-
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY }}
@@ -74,7 +76,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: locker_helpers___LOCKERHELPERSBUILD
-        path: ./.nuke/output/*
+        path: ./.nuke/temp/artifacts/*
         if-no-files-found: error
         retention-days: 1
     needs:
@@ -94,12 +96,12 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
-        path: ./.nuke/temp/artifacts
+        path: ./.nuke/temp/artifacts-download
         pattern: locker_helpers___*
     - name: Cache Run
       uses: actions/cache@v4
       with:
-        path: ./.nuke/cache
+        path: ./.nuke/temp/cache
         key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_KEY }}
         restore-keys: |-
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY }}
@@ -115,7 +117,8 @@ jobs:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   POST_SETUP:
     name: Post Setup
-    runs-on: ubuntu-22.04
+    runs-on:
+      labels: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
       with:
@@ -125,7 +128,7 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        path: ./.nuke/temp/artifacts
+        path: ./.nuke/temp/artifacts-download
     - name: Run Nuke PipelinePostSetup
       run: chmod +x ./build.sh && ./build.sh PipelinePostSetup
       env:
@@ -135,6 +138,7 @@ jobs:
     - LOCKERHELPERSBUILD
     - LOCKERHELPERSPUBLISH
     if: success() || failure() || always()
+    timeout-minutes: 10
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
       NUKE_RUN_RESULT_GITHUB_LOCKERHELPERSBUILD: ${{ needs.LOCKERHELPERSBUILD.result }}
