--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -70,8 +70,8 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Run Nuke PipelineRunEntry
-      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUN_SCRIPT }} PipelineRunEntry --args "run=build;idsToRun=LockerHelpersBuild"
+      name: Rune Nuke LockerHelpersBuild
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUN_SCRIPT }} Run --args "LockerHelpersBuild"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -108,8 +108,8 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Run Nuke PipelineRunEntry
-      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }} PipelineRunEntry --args "run=publish;idsToRun=LockerHelpersPublish"
+      name: Rune Nuke LockerHelpersPublish
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }} Run --args "LockerHelpersPublish"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
