--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -70,7 +70,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke LockerHelpersBuild
+      name: Run Nuke LockerHelpersBuild
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSBUILD_RUN_SCRIPT }} Run --args "LockerHelpersBuild"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
@@ -108,7 +108,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke LockerHelpersPublish
+      name: Run Nuke LockerHelpersPublish
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_LOCKERHELPERSPUBLISH_RUN_SCRIPT }} Run --args "LockerHelpersPublish"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
